Fix positioning of priority dots to consistently appear in top right corner of boxes

--- a/index.html
+++ b/index.html
@@ -54,6 +54,7 @@
         .cinematic-container { display: flex; flex-direction: column; align-items: center; width: 100%; }
         .cinematic-nodes { display: flex; gap: 15px; flex-wrap: wrap; justify-content: center; margin-top: 10px; }
         .priority-tag { position: absolute; top: -8px; right: -8px; width: 16px; height: 16px; border-radius: 50%; z-index: 3; }
+        .flowchart-node, .independent-module { position: relative; }
         .priority-high { background-color: #ea4335; }
         .priority-medium { background-color: #fbbc04; }
         .priority-low { background-color: #9e9e9e; }
