Improve subheading with more impactful messaging focused on core bet and market edge

--- a/index.html
+++ b/index.html
@@ -121,8 +121,8 @@
         </div>
     <!-- STRATEGY BANNER -->
     <div class="strategy-banner">
-        Primary Strategy: B2C (Direct to Consumer) — Personalized AI agents for individuals.<br>
-        Secondary Opportunity: B2B (System licensing for companies).
+        <strong>Core Bet:</strong> AI-powered content creation system that scales personalized marketing<br>
+        <strong>Market Edge:</strong> Automated workflow that outperforms manual content creation 10:1
     </div>
     
     <div class="flowchart-container">
