Fix deployment configuration to support both marketing site and AI video system

--- a/index.html
+++ b/index.html
@@ -115,7 +115,16 @@
     </style>
 </head>
 <body>
-    <div class="slide">
+    <!-- Navigation Menu -->
+    <nav style="position: fixed; top: 0; left: 0; right: 0; background: #1a73e8; padding: 10px 20px; z-index: 1000; display: flex; justify-content: space-between; align-items: center;">
+        <div style="color: white; font-weight: bold; font-size: 18px;">Marketing Forge</div>
+        <div style="display: flex; gap: 20px;">
+            <a href="/" style="color: white; text-decoration: none; padding: 5px 10px; border-radius: 4px; background: rgba(255,255,255,0.1);">Marketing Strategy</a>
+            <a href="/app" style="color: white; text-decoration: none; padding: 5px 10px; border-radius: 4px; background: rgba(255,255,255,0.1);">AI Video System</a>
+        </div>
+    </nav>
+    
+    <div class="slide" style="margin-top: 60px;">
         <div class="slide-header">
             <h1 class="slide-title">Strategic Marketing Operating System</h1>
         </div>
